--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,8 +2,8 @@
 ####################
 # rabbitmq相关配置
 ####################
-rabbitmq.host=basic.gz.cvte.cn
+rabbitmq.host=xxx
 rabbitmq.port=5682
-rabbitmq.vhost=maxhub_vhost
-rabbitmq.username=maxhub
-rabbitmq.password=maxhub
+rabbitmq.vhost=xxx
+rabbitmq.username=xxx
+rabbitmq.password=xxx
